--- a/src/sass/TaskView.scss
+++ b/src/sass/TaskView.scss
@@ -1,35 +1,75 @@
 @use 'var';
-
 .title {
+    font-family: 'Heebo', sans-serif;
     background-color: var.$header;
     padding: 10px;
-    position: fixed;
+    position: relative; /* Esto es importante para que position: absolute funcione correctamente */
     width: 100%;
     height: 120px;
-    top: 0;
-    left: 0;
     z-index: 1000; 
 
     h1 {
         color: var.$font;
-        font-size: 2,2rem;
+        font-size: 3rem; 
         text-align: center;
         margin-top: 20px;
+        font-weight: bold;
+    }
+
+    #btn-createTask {
+        position: absolute;
+        top: 50%;
+        right: 20px; /* Ajusta el valor según sea necesario */
+        transform: translateY(-50%);
+        font-size: 1.2rem;
+        padding: 15px 20px;
+        border-radius: 40px;
+    }
+
+    #icon-createTask {
+        font-size: 30px;
+        color: var.$font;
+        margin-right: 10px;
     }
 }
 
-#btn-createTask {
-    text-align: right;
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 140px; 
+    padding: 20px;
+    position: relative; /* Necesario para posicionar pseudo-elementos */
+
+    background-color: #f9f9f9; 
+    border: 1px solid #ccc; 
+    border-radius: 8px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+.container::before,
+.container::after {
+    content: '';
     position: absolute;
-    top: 50%;
-    right: 100px;
-    transform: translateY(-50%);    
-    font-size: 1.2rem; /* Ajusta el tamaño de la fuente según tus preferencias */
-    padding: 15px 20px; /* Ajusta el padding para aumentar el área del botón */
-    border-radius: 40px; /* Ajusta el radio de las esquinas para que se vea más redondo */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    pointer-events: none; /* Evita que los pseudo-elementos interfieran con los clics */
 }
-#icon-createTask {
-    font-size: 30px; /* Ajusta el tamaño de la fuente según tus preferencias */
-    color: var.$font;
-    margin-right: 10px;
+
+.container::before {
+    background: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 0,
+                linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 0;
+    background-size: 20px 20px;
 }
+
+.container::after {
+    background: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 100%,
+                linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px) 100% 0;
+    background-size: 20px 20px;
+}
+
+
