--- a/src/sass/TaskView.scss
+++ b/src/sass/TaskView.scss
@@ -1,75 +1,82 @@
 @use 'var';
+
 .title {
-    font-family: 'Heebo', sans-serif;
-    background-color: var.$header;
-    padding: 10px;
-    position: relative; /* Esto es importante para que position: absolute funcione correctamente */
-    width: 100%;
-    height: 120px;
-    z-index: 1000; 
+  font-family: 'Heebo', sans-serif;
+  background-color: var.$header;
+  padding: 10px;
+  position: relative;
+  width: 100%;
+  height: 120px;
+  z-index: 1000;
 
+  h1 {
+    color: var.$font;
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 20px;
+    font-weight: bold;
+  }
+
+ 
+  @media (max-width: 768px) {
     h1 {
-        color: var.$font;
-        font-size: 3rem; 
-        text-align: center;
-        margin-top: 20px;
-        font-weight: bold;
+      font-size: 2rem; 
     }
-
     #btn-createTask {
         position: absolute;
+        margin-left: 20px;
         top: 50%;
-        right: 20px; /* Ajusta el valor según sea necesario */
+        right: 20px;
         transform: translateY(-50%);
         font-size: 1.2rem;
         padding: 15px 20px;
         border-radius: 40px;
-    }
+      }
 
-    #icon-createTask {
-        font-size: 30px;
-        color: var.$font;
-        margin-right: 10px;
-    }
+    
+  }
 }
-
+    
+#icon-createTask {
+    font-size: 25px;
+    color: var.$font;
+    margin-right: 20px;
+  }
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-top: 140px; 
-    padding: 20px;
-    position: relative; /* Necesario para posicionar pseudo-elementos */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 140px;
+  padding: 20px;
+  position: relative;
 
-    background-color: #f9f9f9; 
-    border: 1px solid #ccc; 
-    border-radius: 8px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .container::before,
 .container::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    pointer-events: none; /* Evita que los pseudo-elementos interfieran con los clics */
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .container::before {
-    background: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 0,
-                linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 0;
-    background-size: 20px 20px;
+  background: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 0,
+              linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 0;
+  background-size: 20px 20px;
 }
 
 .container::after {
-    background: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 100%,
-                linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px) 100% 0;
-    background-size: 20px 20px;
+  background: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px) 0 100%,
+              linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px) 100% 0;
+  background-size: 20px 20px;
 }
-
-
